Closed Bug 477928 Opened 16 years ago Closed 16 years ago

"ASSERTION: wrong InlinePrefWidthData container for first continuation" with -moz-column

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: jruderman, Assigned: MatsPalmgren_bugz)

References

Details

(5 keywords)

Attachments

(2 files)

Attached file testcase
Triggers an assertion added in bug 444027: ###!!! ASSERTION: wrong InlinePrefWidthData container for first continuation: 'f != this', file /Users/jruderman/central/layout/generic/nsTextFrameThebes.cpp, line 5610
I've seen the corresponding InlineMinWidthData assertion too.
Assignee: nobody → mats.palmgren
OS: Mac OS X → All
Hardware: x86 → All
Attached patch Patch rev. 1Splinter Review
Attachment #361766 - Flags: superreview?(roc)
Attachment #361766 - Flags: review?(roc)
Attachment #361766 - Flags: superreview?(roc)
Attachment #361766 - Flags: superreview+
Attachment #361766 - Flags: review?(roc)
Attachment #361766 - Flags: review+
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Comment on attachment 361766 [details] [diff] [review] Patch rev. 1 Asking for approval together with bug 444027.
Attachment #361766 - Flags: approval1.9.1?
Attachment #361766 - Flags: approval1.9.0.8?
Flags: wanted1.9.0.x+
Flags: blocking1.9.0.8?
Flags: blocking1.9.0.8? → blocking1.9.0.8+
Comment on attachment 361766 [details] [diff] [review] Patch rev. 1 Approved for 1.9.0.8, a=dveditz for release-drivers
Attachment #361766 - Flags: approval1.9.0.8? → approval1.9.0.8+
Attachment #361766 - Flags: approval1.9.1? → approval1.9.1+
mozilla/layout/generic/nsContainerFrame.cpp 1.314 mozilla/layout/generic/crashtests/477928.html 1.1 mozilla/layout/generic/crashtests/crashtests.list 1.121
Keywords: fixed1.9.0.8
verified fixed 1.9.0.9 using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.0.9pre) Gecko/2009040221 Firefox/3.0.9pre (debug build) and jesse's testcase
verified FIXED with attached test case on debug builds: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1pre) Gecko/20090608 Shiretoko/3.5pre ID:20090608122057 and Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090608 Minefield/3.6a1pre ID:20090608122028
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: