Temporarily forget the line container while calculating widths for next-in-flow children. b=477928 r+sr=roc